--- a/src/main/resources/messages/messages_ko.properties
+++ b/src/main/resources/messages/messages_ko.properties
@@ -1,3 +1,6 @@
 NotEmpty.userVo.name=\uC774\uB984\uC744 \uC785\uB825\uD558\uC138\uC694.
 NotEmpty.userVo.id=\uC544\uC774\uB514\uB97C \uC785\uB825\uD558\uC138\uC694.
 NotEmpty.userVo.password=\uBE44\uBC00\uBC88\uD638\uB97C \uC785\uB825\uD558\uC138\uC694.
+
+Length.userVo.id=\uC544\uC774\uB514\uB294 2\uC790 \uC774\uC0C1 10\uC790 \uC774\uD558\uC785\uB2C8\uB2E4.
+Length.userVo.password=\uBE44\uBC00\uBC88\uD638\uB294 2\uC790 \uC774\uC0C1 10\uC790 \uC774\uD558\uC785\uB2C8\uB2E4.
